[gd_scene load_steps=6 format=4 uid="uid://d031rdvr6cmkj"]

[ext_resource type="Script" uid="uid://dqam8peco7o7c" path="res://player.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://3uh5rlyvmsbb" path="res://icon.svg" id="2_0xm2m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(51.2, 51.2)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0xm2m"]
texture = ExtResource("2_0xm2m")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:7/0 = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_h2yge"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_0xm2m")

[node name="Node2D" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(167, 128)
script = ExtResource("1_ig7tw")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_0xm2m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_h2yge")

[node name="Camera2D" type="Camera2D" parent="Player"]
offset = Vector2(0, -200)
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
editor_draw_drag_margin = true

[node name="CoyoteTimer" type="Timer" parent="Player"]
wait_time = 0.1
one_shot = true

[node name="JumpBuffer" type="Timer" parent="Player"]
wait_time = 0.05
one_shot = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-113, 0)
tile_map_data = PackedByteArray("AAADAAAAAAAAAAUAAAAEAAAAAAACAAAAAAAFAAAAAAACAAAAAAAGAAAAAAACAAAAAAAHAAAAAAACAAAAAAAIAAAAAAACAAAAAAAJAAAAAAACAAAAAAAKAAAAAAACAAAAAAALAAAAAAACAAAAAAAMAAAAAAACAAAAAAANAAAAAAACAAAAAAAOAAAAAAACAAAAAAAPAAAAAAACAAAAAAAQAAAAAAACAAAAAAARAAAAAAACAAAAAAASAAAAAAACAAAAAAATAAAAAAACAAAAAAAUAAAAAAACAAAAAAAVAAAAAAACAAAAAAAWAAAAAAACAAAAAAAXAAAAAAACAAAAAAAYAAAAAAACAAAAAAAZAAAAAAACAAAAAAAaAAAAAAACAAAAAAAbAAAAAAACAAAAAAAcAAAAAAACAAAAAAAdAAAAAAACAAAAAAAeAAAAAAACAAAAAAAfAAAAAAACAAAAAAAgAAAAAAACAAAAAAAhAAAAAAACAAAAAAAiAAAAAAACAAAAAAAjAAAAAAACAAAAAAAkAAAAAAACAAAAAAAlAAAAAAACAAAAAAAmAAAAAAACAAAAAAAnAAAAAAACAAAAAAAoAAAAAAACAAAAAAApAAAAAAACAAAAAAAqAAAAAAACAAAAAAArAAAAAAACAAAAAAAsAAAAAAACAAAAAAAsAAEAAAACAAAAAAAtAAEAAAACAAAAAAAuAAEAAAACAAAAAAAvAAEAAAACAAAAAAAwAAEAAAACAAAAAAAxAAEAAAACAAAAAAAyAAEAAAACAAAAAAAzAAEAAAACAAAAAAA0AAEAAAACAAAAAAA1AAEAAAACAAAAAAA2AAEAAAACAAAAAAA3AAEAAAACAAAAAAA3AAAAAAACAAAAAAA4AAAAAAACAAAAAAA5AAAAAAACAAAAAAA6AAAAAAACAAAAAAA7AAAAAAACAAAAAAA8AAAAAAACAAAAAAA9AAAAAAACAAAAAAA+AAAAAAACAAAAAAA/AAAAAAAHAAAAAAA/AAEAAAAHAAMAAAA/AAIAAAAHAAMAAAA/AAMAAAAHAAMAAAA/AAQAAAAHAAMAAAA/AAUAAAAHAAMAAAA/AAoAAAAHAAQAAAA/AAsAAAAHAAMAAAA/AAwAAAAHAAMAAAA/AA0AAAAHAAMAAAA/AA4AAAAHAAMAAAA/AA8AAAAHAAMAAAA/ABAAAAAHAAMAAAA/ABEAAAAHAAMAAAA/ABIAAAAHAAMAAAA/ABMAAAAHAAMAAAA/ABQAAAAHAAMAAAA/ABUAAAAHAAMAAAA/ABYAAAAAAAUAAAA/ABcAAAAAAAUAAAA/AAYAAAAHAAQAAAA/AAcAAAAHAAQAAAA/AAgAAAAHAAQAAAA/AAkAAAAHAAQAAAA/ABgAAAAAAAUAAAA/ABkAAAAAAAUAAAA/ABoAAAAAAAUAAAA/ABsAAAAAAAUAAAA/ABwAAAAAAAUAAAA/AB0AAAAAAAUAAAA/AB4AAAAAAAUAAAA/AB8AAAAAAAUAAAA/ACAAAAAAAAUAAAA/ACEAAAAAAAUAAAA/ACIAAAAAAAUAAAA/ACMAAAAAAAUAAAA/ACQAAAAAAAUAAAA/ACUAAAAAAAUAAAA/ACYAAAAAAAUAAAA/ACcAAAAAAAUAAAA/ACgAAAAAAAUAAAA+ACgAAAAAAAUAAAA9ACgAAAAAAAUAAAA8ACgAAAAAAAUAAAA7ACgAAAAAAAUAAAA6ACgAAAAAAAUAAAA5ACgAAAAAAAUAAAA4ACgAAAAAAAUAAAA3ACgAAAAAAAUAAAA2ACgAAAAAAAUAAAA1ACgAAAAAAAUAAAA0ACgAAAAAAAUAAAAzACgAAAAAAAUAAAAyACgAAAAAAAUAAAAxACgAAAAAAAUAAAAwACgAAAAAAAUAAAAvACgAAAAAAAUAAAAuACgAAAAAAAUAAAAtACgAAAAAAAUAAAAsACgAAAAAAAUAAAArACcAAAAAAAUAAAAqACcAAAAAAAUAAAApACcAAAAAAAUAAAAoACYAAAAAAAUAAAAnACYAAAAAAAUAAAAmACYAAAAAAAUAAAAlACYAAAAAAAUAAAAkACYAAAAAAAUAAAAjACYAAAAAAAUAAAAiACYAAAAAAAUAAAAhACYAAAAAAAUAAAAgACYAAAAAAAUAAAAfACYAAAAAAAUAAAAeACYAAAAAAAUAAAAdACYAAAAAAAUAAAAcACYAAAAAAAUAAAAbACYAAAAAAAUAAAAaACYAAAAAAAUAAAAZACYAAAAAAAUAAAAYACYAAAAAAAUAAAAXACYAAAAAAAUAAAAWACYAAAAAAAUAAAACAAAAAAAAAAUAAAABAAAAAAAAAAUAAAAAAAAAAAAAAAUAAAD//wAAAAAAAAUAAAD+/wAAAAAAAAUAAAD9/wAAAAAAAAUAAAD8/wAAAAAAAAUAAAD7/wAAAAAAAAUAAAD6/wAAAAAAAAUAAAD5/wAAAAAAAAUAAAD4/wAAAAAAAAUAAAD3/wAAAAAAAAUAAAD2/wAAAAAAAAUAAAD1/wAAAAAAAAUAAAD0/wAAAAAAAAUAAADz/wAAAAAAAAUAAADy/wAAAAAAAAUAAADx/wAAAAAAAAUAAADw/wAAAAAAAAUAAADv/wAAAAAAAAUAAADu/wAAAAAAAAUAAADt/wAAAAAAAAUAAADs/wAAAAAAAAUAAADr/wAAAAAAAAUAAADq/wAAAAAAAAUAAADq/wEAAAAAAAUAAADq/wIAAAAAAAUAAADq/wMAAAAAAAUAAADq/wQAAAAAAAUAAADq/wUAAAAAAAUAAADq/wYAAAAAAAUAAADq/wcAAAAAAAUAAADq/wgAAAAAAAUAAADq/wkAAAAAAAUAAADq/woAAAAAAAUAAADq/wsAAAAAAAUAAADq/wwAAAAAAAUAAADq/w0AAAAAAAUAAADq/w4AAAAAAAUAAADq/w8AAAAAAAUAAADq/xAAAAAAAAUAAADq/xEAAAAAAAUAAADq/xIAAAAAAAUAAADq/xMAAAAAAAUAAADq/xQAAAAAAAUAAADq/xUAAAAAAAUAAADq/xYAAAAAAAUAAADq/xcAAAAAAAUAAADq/xgAAAAAAAUAAADq/xkAAAAAAAUAAADq/xoAAAAAAAUAAADq/xsAAAAAAAUAAADq/xwAAAAAAAUAAADq/x0AAAAAAAUAAADq/x4AAAAAAAUAAADq/x8AAAAAAAUAAADq/yAAAAAAAAUAAADq/yEAAAAAAAUAAADq/yIAAAAAAAUAAADq/yMAAAAAAAUAAADq/yQAAAAAAAUAAADq/yUAAAAAAAUAAADq/yYAAAAAAAUAAADq/ycAAAAAAAUAAADq/ygAAAAAAAUAAADq/ykAAAAAAAUAAADq/yoAAAAAAAUAAADr/yoAAAAAAAUAAADs/yoAAAAAAAUAAADt/yoAAAAAAAUAAADu/yoAAAAAAAUAAADv/yoAAAAAAAUAAADw/yoAAAAAAAUAAADx/yoAAAAAAAUAAADy/yoAAAAAAAUAAADz/yoAAAAAAAUAAAD0/yoAAAAAAAUAAAD1/yoAAAAAAAUAAAD2/yoAAAAAAAUAAAD3/yoAAAAAAAUAAAD4/yoAAAAAAAUAAAD5/yoAAAAAAAUAAAD6/yoAAAAAAAUAAAD7/yoAAAAAAAUAAAD8/yoAAAAAAAUAAAD9/ykAAAAAAAUAAAD+/ykAAAAAAAUAAAD//ykAAAAAAAUAAAAAACkAAAAAAAUAAAABACkAAAAAAAUAAAACACgAAAAAAAUAAAADACgAAAAAAAUAAAAEACgAAAAAAAUAAAAFACcAAAAAAAUAAAAGACcAAAAAAAUAAAAHACcAAAAAAAUAAAAIACcAAAAAAAUAAAAJACcAAAAAAAUAAAAKACcAAAAAAAUAAAALACcAAAAAAAUAAAAMACcAAAAAAAUAAAANACcAAAAAAAUAAAAOACcAAAAAAAUAAAAPACcAAAAAAAUAAAAQACcAAAAAAAUAAAARACcAAAAAAAUAAAASACcAAAAAAAUAAAATACcAAAAAAAUAAAAUACcAAAAAAAUAAAAVACcAAAAAAAUAAAAWACcAAAAAAAUAAAAEACcAAAAAAAUAAAACACkAAAAAAAUAAAD9/yoAAAAAAAUAAAArACgAAAAAAAUAAAApACYAAAAAAAUAAADx/xYAAAAAAAUAAADx/xcAAAAAAAUAAADy/xYAAAAAAAUAAADy/xcAAAAAAAUAAADz/xYAAAAAAAUAAADz/xcAAAAAAAUAAAD0/xYAAAAAAAUAAAD0/xcAAAAAAAUAAAD1/xYAAAAAAAUAAAD1/xcAAAAAAAUAAAD2/xYAAAAAAAUAAAD2/xcAAAAAAAUAAAD3/xYAAAAAAAUAAAD3/xcAAAAAAAUAAAD4/xYAAAAAAAUAAAD4/xcAAAAAAAUAAAD5/xYAAAAAAAUAAAD5/xcAAAAAAAUAAAD6/xYAAAAAAAUAAAD6/xcAAAAAAAUAAAD7/xYAAAAAAAUAAAD7/xcAAAAAAAUAAAABABgAAAAAAAUAAAABABkAAAAAAAUAAAACABgAAAAAAAUAAAACABkAAAAAAAUAAAADABgAAAAAAAUAAAADABkAAAAAAAUAAAAEABgAAAAAAAUAAAAEABkAAAAAAAUAAAAFABgAAAAAAAUAAAAFABkAAAAAAAUAAAAGABgAAAAAAAUAAAAGABkAAAAAAAUAAAAHABgAAAAAAAUAAAAHABkAAAAAAAUAAAAIABgAAAAAAAUAAAAIABkAAAAAAAUAAAAJABgAAAAAAAUAAAAJABkAAAAAAAUAAAAKABgAAAAAAAUAAAAKABkAAAAAAAUAAAALABgAAAAAAAUAAAALABkAAAAAAAUAAAAMABgAAAAAAAUAAAAMABkAAAAAAAUAAAANABgAAAAAAAUAAAANABkAAAAAAAUAAAAOABgAAAAAAAUAAAAOABkAAAAAAAUAAAAPABgAAAAAAAUAAAAPABkAAAAAAAUAAAAhABsAAAAAAAUAAAAhABwAAAAAAAUAAAAiABsAAAAAAAUAAAAiABwAAAAAAAUAAAAjABsAAAAAAAUAAAAjABwAAAAAAAUAAAAkABsAAAAAAAUAAAAkABwAAAAAAAUAAAAlABsAAAAAAAUAAAAlABwAAAAAAAUAAAAmABsAAAAAAAUAAAAmABwAAAAAAAUAAAAnABsAAAAAAAUAAAAnABwAAAAAAAUAAAAoABsAAAAAAAUAAAAoABwAAAAAAAUAAAApABsAAAAAAAUAAAApABwAAAAAAAUAAAAqABsAAAAAAAUAAAAqABwAAAAAAAUAAAArABsAAAAAAAUAAAArABwAAAAAAAUAAAAsABsAAAAAAAUAAAAsABwAAAAAAAUAAAAtABsAAAAAAAUAAAAtABwAAAAAAAUAAAAuABsAAAAAAAUAAAAuABwAAAAAAAUAAAAvABsAAAAAAAUAAAAvABwAAAAAAAUAAAAwABsAAAAAAAUAAAAwABwAAAAAAAUAAAAxABsAAAAAAAUAAAAxABwAAAAAAAUAAAAyABsAAAAAAAUAAAAyABwAAAAAAAUAAAAzABsAAAAAAAUAAAAzABwAAAAAAAUAAAA0ABsAAAAAAAUAAAA0ABwAAAAAAAUAAAA1ABsAAAAAAAUAAAA1ABwAAAAAAAUAAAAWAB4AAAAAAAUAAAAWAB8AAAAAAAUAAAAXAB4AAAAAAAUAAAAXAB8AAAAAAAUAAAAYAB4AAAAAAAUAAAAYAB8AAAAAAAUAAAAZAB4AAAAAAAUAAAAZAB8AAAAAAAUAAAAaAB4AAAAAAAUAAAAaAB8AAAAAAAUAAAAOAA4AAAAAAAUAAAAOAA8AAAAAAAUAAAAPAA4AAAAAAAUAAAAPAA8AAAAAAAUAAAAQAA4AAAAAAAUAAAAQAA8AAAAAAAUAAAARAA4AAAAAAAUAAAARAA8AAAAAAAUAAAASAA4AAAAAAAUAAAASAA8AAAAAAAUAAAATAA4AAAAAAAUAAAATAA8AAAAAAAUAAAAUAA4AAAAAAAUAAAAUAA8AAAAAAAUAAAAVAA4AAAAAAAUAAAAVAA8AAAAAAAUAAAAWAA4AAAAAAAUAAAAWAA8AAAAAAAUAAAAXAA4AAAAAAAUAAAAXAA8AAAAAAAUAAAAmAAkAAAAAAAUAAAAmAAoAAAAAAAUAAAAnAAkAAAAAAAUAAAAnAAoAAAAAAAUAAAAoAAkAAAAAAAUAAAAoAAoAAAAAAAUAAAApAAkAAAAAAAUAAAApAAoAAAAAAAUAAAAqAAkAAAAAAAUAAAAqAAoAAAAAAAUAAAArAAkAAAAAAAUAAAArAAoAAAAAAAUAAAAsAAkAAAAAAAUAAAAsAAoAAAAAAAUAAAAfAA0AAAAAAAUAAAAfAA4AAAAAAAUAAAAgAA0AAAAAAAUAAAAgAA4AAAAAAAUAAAAhAA0AAAAAAAUAAAAhAA4AAAAAAAUAAAAdAA0AAAAAAAUAAAAdAA4AAAAAAAUAAAAeAA0AAAAAAAUAAAAeAA4AAAAAAAUAAAA=")
tile_set = SubResource("TileSet_h2yge")

[connection signal="timeout" from="Player/CoyoteTimer" to="Player" method="_on_coyote_timeout"]
[connection signal="timeout" from="Player/JumpBuffer" to="Player" method="_on_jump_buffer_timeout"]
